--- a/my-apps/trillium/kustomization.yaml
+++ b/my-apps/trillium/kustomization.yaml
@@ -1,4 +1,4 @@
-# File: nginx/kustomization.yaml
+# File: trilium/kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
