--- a/my-apps/trilium/httproute.yaml
+++ b/my-apps/trilium/httproute.yaml
@@ -16,5 +16,5 @@ spec:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: nginx
+        - name: trilium
           port: 8080
