--- a/my-apps/trilium/deployment.yaml
+++ b/my-apps/trilium/deployment.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   name: trilium
   namespace: trilium
-  annotations: 
-    argocd.argoproj.io/sync-wave: "0"
+  # annotations: 
+  #   argocd.argoproj.io/sync-wave: "0"
 spec:
   replicas: 3
   selector:
