--- a/my-apps/trilium/service.yaml
+++ b/my-apps/trilium/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: trilium
-  namespace: trilium
+  name: trilium-service
 spec:
-  ports:
-    - port: 8080
-      targetPort: 8080
-      protocol: TCP
   selector:
-    app.kubernetes.io/name: trilium
+    app: trilium
+  ports:
+  - port: 8080
+    targetPort: 8080  # Must match containerPort
+    protocol: TCP
