--- a/my-apps/trilium/deployment.yaml
+++ b/my-apps/trilium/deployment.yaml
@@ -21,6 +21,10 @@ spec:
         env:
         - name: TRILIUM_PORT
           value: "8080"
+        - name: USER_ID # optional
+          value: "1000"
+        - name: GROUP_ID # optional
+          value: "1000"
         - name: TZ
           value: "America/Chicago"
         volumeMounts:
