--- a/my-apps/trilium/httproute.yaml
+++ b/my-apps/trilium/httproute.yaml
@@ -10,7 +10,7 @@ spec:
   - name: gateway-external
     namespace: gateway
   hostnames:
-  - "trilium.homelabjunkie" 
+  - "trilium.homelabjunkie.com" 
   rules:
   - matches:
     - path:
