--- a/my-apps/trilium/deployment.yaml
+++ b/my-apps/trilium/deployment.yaml
@@ -25,6 +25,12 @@ spec:
         env:
         - name: TRILIUM_DATA_DIR
           value: "/home/node/trilium-data"
+        - name: TZ
+          value: "UTC"
+        - name: USER_UID
+          value: "1000"
+        - name: USER_GID
+          value: "1000"
         ports:
         - containerPort: 8080
           name: http
