--- a/my-apps/trilium/deployment.yaml
+++ b/my-apps/trilium/deployment.yaml
@@ -14,23 +14,13 @@ spec:
       labels:
         app: trilium
     spec:
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
       containers:
       - name: trilium-server
         image: triliumnext/trilium:latest
         imagePullPolicy: Always
         env:
         - name: TRILIUM_DATA_DIR
-          value: "/home/node/trilium-data"
-        - name: TZ
-          value: "UTC"
-        - name: USER_UID
-          value: "1000"
-        - name: USER_GID
-          value: "1000"
+          value: "/trilium-data"
         ports:
         - containerPort: 8080
           name: http
@@ -43,20 +33,33 @@ spec:
             cpu: "500m"
         volumeMounts:
         - name: trilium-data
-          mountPath: /home/node/trilium-data
+          mountPath: /trilium-data
         livenessProbe:
           httpGet:
             path: /
             port: 8080
-          initialDelaySeconds: 30
-          periodSeconds: 10
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          timeoutSeconds: 10
         readinessProbe:
           httpGet:
             path: /
             port: 8080
-          initialDelaySeconds: 5
-          periodSeconds: 10
+          initialDelaySeconds: 30
+          periodSeconds: 20
+          timeoutSeconds: 10
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
       volumes:
       - name: trilium-data
         persistentVolumeClaim:
           claimName: trilium-data
+      securityContext:
+        fsGroup: 1000
+        runAsNonRoot: true
+        runAsUser: 1000
