--- a/infrastructure/storage/longhorn/httproute.yaml
+++ b/infrastructure/storage/longhorn/httproute.yaml
@@ -16,6 +16,7 @@ spec:
             value: /
       backendRefs:
         - name: longhorn-frontend # Default Longhorn UI service name
+          kind: Service
           namespace: longhorn-system
           port: 80 # Default Longhorn UI port
           weight: 1
