Add infrastructure for oauth2

--- a/infrastructure/infrastructure-components-appset.yaml
+++ b/infrastructure/infrastructure-components-appset.yaml
@@ -13,6 +13,8 @@ spec:
       - path: infrastructure/networking/*
       - path: infrastructure/storage/*
       - path: infrastructure/controllers/*
+      - path: infrastructure/security/oauth2-proxy  # Add OAuth2 proxy
+            
   template:
     metadata:
       name: '{{path.basename}}'
