--- a/infrastructure/storage/longhorn/kustomization.yaml
+++ b/infrastructure/storage/longhorn/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: longhorn-system
 resources:
   - namespace.yaml
   - httproute.yaml
+  - longhorn-minio.yaml
 helmCharts:
   - name: longhorn
     repo: https://charts.longhorn.io
