--- a/infrastructure/storage/longhorn/kustomization.yaml
+++ b/infrastructure/storage/longhorn/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yaml
   - httproute.yaml
   - longhorn-minio.yaml
+  - backup-target.yaml
 helmCharts:
   - name: longhorn
     repo: https://charts.longhorn.io
