--- a/infrastructure/security/nginxtest/httproute.yaml
+++ b/infrastructure/security/nginxtest/httproute.yaml
@@ -2,8 +2,8 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: nginx
-  namespace: nginx-example
+  name: nginx-test
+  namespace: nginx-test
 spec:
   parentRefs:
     - name: gateway-external
@@ -16,5 +16,5 @@ spec:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: nginx
+        - name: nginx-test
           port: 80
