--- a/infrastructure/security/nginx-test/pvc.yaml
+++ b/infrastructure/security/nginx-test/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nginx-storage-test
+  namespace: nginx-test 
 spec:
   storageClassName: longhorn
   accessModes:
