--- a/infrastructure/security/nginx-test/httproute.yaml
+++ b/infrastructure/security/nginx-test/httproute.yaml
@@ -1,4 +1,4 @@
-# File: nginx/httproute.yaml
+# File: infrastructure/security/nginx-test/httproute.yaml
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
