--- a/infrastructure/security/nginx-test/kustomization.yaml
+++ b/infrastructure/security/nginx-test/kustomization.yaml
@@ -1,4 +1,4 @@
-# File: nginx/kustomization.yaml
+# File: infrastructure/security/nginx-test/kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
