nginx test in security directory

--- a/infrastructure/security/nginx-test/deployment.yaml
+++ b/infrastructure/security/nginx-test/deployment.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
       - name: nginx-test
         image: nginx:alpine
+        imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: nginx-storage-test
           mountPath: /usr/share/nginx/html
