--- a/infrastructure/security/nginx-test/deployment.yaml
+++ b/infrastructure/security/nginx-test/deployment.yaml
@@ -1,4 +1,4 @@
-#file: infrastructure/security/nginx-test/deployment.yaml
+# File: infrastructure/security/nginx-test/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,6 +16,11 @@ spec:
       labels:
         app: nginx-test
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
       - name: nginx-test
         image: nginx:alpine
@@ -33,8 +38,6 @@ spec:
         ports:
         - name: http
           containerPort: 80
-        - name: https
-          containerPort: 443
         readinessProbe:
           httpGet:
             path: /
@@ -47,7 +50,6 @@ spec:
             port: 80
           initialDelaySeconds: 15
           periodSeconds: 20
-          
       volumes:
       - name: nginx-storage-test
         persistentVolumeClaim:
