--- a/infrastructure/security/nginx-test/deployment.yaml
+++ b/infrastructure/security/nginx-test/deployment.yaml
@@ -1,4 +1,3 @@
-# File: infrastructure/security/nginx-test/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -50,7 +49,7 @@ spec:
             port: 80
           initialDelaySeconds: 15
           periodSeconds: 20
-      # volumes:
-      # - name: nginx-storage-test
-      #   persistentVolumeClaim:
-      #     claimName: nginx-storage-test-pvc
+      volumes:
+      - name: nginx-storage-test
+        persistentVolumeClaim:
+          claimName: nginx-storage-test-pvc
