--- a/infrastructure/security/authentik/deployment.yaml
+++ b/infrastructure/security/authentik/deployment.yaml
@@ -124,6 +124,8 @@ spec:
             secretKeyRef:
               name: authentik-postgresql-password
               key: password
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
         ports:
         - containerPort: 5432
           name: postgresql
