--- a/infrastructure/security/authentik/deployment.yaml
+++ b/infrastructure/security/authentik/deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: authentik
     spec:
+      initContainers:
+      - name: wait-for-dependencies
+        image: busybox:1.35
+        command: ['sh', '-c', 'until nslookup authentik-postgresql; do echo waiting for postgresql; sleep 2; done; until nslookup authentik-redis; do echo waiting for redis; sleep 2; done']
       containers:
       - name: server
         image: ghcr.io/goauthentik/server:2023.8.4
@@ -27,7 +31,7 @@ spec:
               name: authentik-secret-key
               key: secret-key
         - name: AUTHENTIK_POSTGRESQL__HOST
-          value: "postgresql"
+          value: "authentik-postgresql"
         - name: AUTHENTIK_POSTGRESQL__USER
           value: "authentik"
         - name: AUTHENTIK_POSTGRESQL__NAME
@@ -38,15 +42,23 @@ spec:
               name: authentik-postgresql-password
               key: password
         - name: AUTHENTIK_REDIS__HOST
-          value: "redis"
+          value: "authentik-redis"
         - name: AUTHENTIK_ERROR_REPORTING__ENABLED
           value: "false"
+        command: ["/bin/bash"]
+        args: 
+        - "-c"
+        - |
+          echo "Running database migrations..."
+          /authentik/bin/python -m authentik.root.migrate
+          echo "Starting server..."
+          /authentik/bin/python -m lifecycle.migrate
+          /authentik/bin/python -m authentik.root.server
         volumeMounts:
         - name: media
           mountPath: /media
       - name: worker
         image: ghcr.io/goauthentik/server:2023.8.4
-        command: ["/authentik/worker"]
         env:
         - name: AUTHENTIK_SECRET_KEY
           valueFrom:
@@ -54,7 +66,7 @@ spec:
               name: authentik-secret-key
               key: secret-key
         - name: AUTHENTIK_POSTGRESQL__HOST
-          value: "postgresql"
+          value: "authentik-postgresql"
         - name: AUTHENTIK_POSTGRESQL__USER
           value: "authentik"
         - name: AUTHENTIK_POSTGRESQL__NAME
@@ -65,33 +77,14 @@ spec:
               name: authentik-postgresql-password
               key: password
         - name: AUTHENTIK_REDIS__HOST
-          value: "redis"
+          value: "authentik-redis"
         - name: AUTHENTIK_ERROR_REPORTING__ENABLED
           value: "false"
+        command: ["/authentik/bin/python"]
+        args: ["-m", "authentik.root.worker"]
         volumeMounts:
         - name: media
           mountPath: /media
-      initContainers:
-      - name: migrate-database
-        image: ghcr.io/goauthentik/server:2023.8.4
-        command: ["/authentik/bootstrap/migrate.sh"]
-        env:
-        - name: AUTHENTIK_SECRET_KEY
-          valueFrom:
-            secretKeyRef:
-              name: authentik-secret-key
-              key: secret-key
-        - name: AUTHENTIK_POSTGRESQL__HOST
-          value: "postgresql"
-        - name: AUTHENTIK_POSTGRESQL__USER
-          value: "authentik"
-        - name: AUTHENTIK_POSTGRESQL__NAME
-          value: "authentik"
-        - name: AUTHENTIK_POSTGRESQL__PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: authentik-postgresql-password
-              key: password
       volumes:
       - name: media
         persistentVolumeClaim:
