--- a/infrastructure/security/authentik/deployment.yaml
+++ b/infrastructure/security/authentik/deployment.yaml
@@ -12,24 +12,6 @@ spec:
       labels:
         app: authentik
     spec:
-      initContainers:
-      - name: wait-for-db
-        image: postgres:13-alpine
-        command: 
-        - sh
-        - -c
-        - |
-          until pg_isready -h authentik-postgresql -p 5432 -U authentik; do
-            echo "Waiting for PostgreSQL to be ready..."
-            sleep 2
-          done
-          echo "PostgreSQL is ready!"
-        env:
-        - name: PGPASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: authentik-postgresql-password
-              key: password
       containers:
       - name: server
         image: ghcr.io/goauthentik/server:2023.8.4
@@ -59,15 +41,6 @@ spec:
           value: "authentik-redis"
         - name: AUTHENTIK_ERROR_REPORTING__ENABLED
           value: "false"
-        command: 
-        - /bin/bash
-        - -c
-        - |
-          set -e
-          echo "Running database migrations..."
-          /authentik/bin/python -m authentik.root.migrate
-          echo "Starting server..."
-          exec /authentik/bin/python -m authentik.root.server
         volumeMounts:
         - name: media
           mountPath: /media
@@ -75,13 +48,14 @@ spec:
           httpGet:
             path: /api/v3/core/version/
             port: 9000
-          initialDelaySeconds: 30
+          initialDelaySeconds: 60
           periodSeconds: 10
+          failureThreshold: 10
         livenessProbe:
           httpGet:
             path: /api/v3/core/version/
             port: 9000
-          initialDelaySeconds: 60
+          initialDelaySeconds: 90
           periodSeconds: 30
       - name: worker
         image: ghcr.io/goauthentik/server:2023.8.4
@@ -156,23 +130,11 @@ spec:
         readinessProbe:
           exec:
             command:
-            - pg_isready
-            - -h
-            - localhost
-            - -U
-            - authentik
+            - sh
+            - -c
+            - exec pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
           initialDelaySeconds: 5
           periodSeconds: 5
-        livenessProbe:
-          exec:
-            command:
-            - pg_isready
-            - -h
-            - localhost
-            - -U
-            - authentik
-          initialDelaySeconds: 10
-          periodSeconds: 10
       volumes:
       - name: data
         persistentVolumeClaim:
@@ -207,11 +169,6 @@ spec:
             command: ["redis-cli", "ping"]
           initialDelaySeconds: 5
           periodSeconds: 5
-        livenessProbe:
-          exec:
-            command: ["redis-cli", "ping"]
-          initialDelaySeconds: 10
-          periodSeconds: 10
       volumes:
       - name: data
         persistentVolumeClaim:
