--- a/infrastructure/security/authentik/deployment.yaml
+++ b/infrastructure/security/authentik/deployment.yaml
@@ -12,6 +12,32 @@ spec:
       labels:
         app: authentik
     spec:
+      initContainers:
+      - name: migrations
+        image: ghcr.io/goauthentik/server:2024.6.2
+        command: ["ak"]
+        args: ["migrate"]
+        env:
+        - name: AUTHENTIK_SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: authentik-secret-key
+              key: secret-key
+        - name: AUTHENTIK_POSTGRESQL__HOST
+          value: "authentik-postgresql"
+        - name: AUTHENTIK_POSTGRESQL__USER
+          value: "authentik"
+        - name: AUTHENTIK_POSTGRESQL__NAME
+          value: "authentik"
+        - name: AUTHENTIK_POSTGRESQL__PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: authentik-postgresql-password
+              key: password
+        - name: AUTHENTIK_REDIS__HOST
+          value: "authentik-redis"
+        - name: AUTHENTIK_ERROR_REPORTING__ENABLED
+          value: "false"
       containers:
       - name: server
         image: ghcr.io/goauthentik/server:2024.6.2
@@ -41,6 +67,8 @@ spec:
           value: "authentik-redis"
         - name: AUTHENTIK_ERROR_REPORTING__ENABLED
           value: "false"
+        command: ["ak"]
+        args: ["server"]
         volumeMounts:
         - name: media
           mountPath: /media
@@ -48,13 +76,13 @@ spec:
           httpGet:
             path: /api/v3/core/version/
             port: 9000
-          initialDelaySeconds: 60
+          initialDelaySeconds: 30
           periodSeconds: 10
         livenessProbe:
           httpGet:
             path: /api/v3/core/version/
             port: 9000
-          initialDelaySeconds: 90
+          initialDelaySeconds: 60
           periodSeconds: 30
       - name: worker
         image: ghcr.io/goauthentik/server:2024.6.2
@@ -79,6 +107,8 @@ spec:
           value: "authentik-redis"
         - name: AUTHENTIK_ERROR_REPORTING__ENABLED
           value: "false"
+        command: ["ak"]
+        args: ["worker"]
         volumeMounts:
         - name: media
           mountPath: /media
