--- a/my-apps/headlamp/httproute.yaml
+++ b/my-apps/headlamp/httproute.yaml
@@ -2,7 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: headlamp
-  namespace: kube-system
+  namespace: headlamp
 spec:
   parentRefs:
     - name: gateway-external
@@ -18,3 +18,4 @@ spec:
         - name: headlamp
           port: 80
           weight: 1
+          kind: Service
