--- a/my-apps/headlamp/kustomization.yaml
+++ b/my-apps/headlamp/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kube-system
+namespace: headlamp
 labels:
   - pairs:
       app.kubernetes.io/name: headlamp
