--- a/my-apps/headlamp/clusterrolebinding.yaml
+++ b/my-apps/headlamp/clusterrolebinding.yaml
@@ -5,7 +5,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: headlamp-admin
-    namespace: headlamp
+    namespace: kube-system
 roleRef:
   kind: ClusterRole
   name: cluster-admin
