--- a/my-apps/trilium/deployment.yaml
+++ b/my-apps/trilium/deployment.yaml
@@ -18,12 +18,12 @@ spec:
       - name: trilium-server
         image: triliumnext/trilium:latest
         env:
-        - name: TRILIUM_DATA_DIR
-          value: "/data"
+        # - name: TRILIUM_DATA_DIR
+        #   value: "/data"
         - name: USER_UID
-          value: "0"  # Run as root initially
+          value: "1000"  
         - name: USER_GID
-          value: "0"
+          value: "1000"
         ports:
         - containerPort: 8080
           name: http
