--- a/my-apps/guestbook-test/http-route.yaml
+++ b/my-apps/guestbook-test/http-route.yaml
@@ -9,6 +9,7 @@ spec:
     kind: Gateway
     name: gateway-external
     namespace: gateway
+    sectionName: https
   hostnames:
   - "guestbook.homelabjunkie.com"
   rules:
