--- a/my-apps/guestbook-test/deployment.yaml
+++ b/my-apps/guestbook-test/deployment.yaml
@@ -26,7 +26,9 @@ spec:
           name: http
         env:
         - name: GET_HOSTS_FROM
-          value: "dns"
+          value: "env"
+        - name: REDIS_MASTER_SERVICE_HOST
+          value: "redis"
         - name: REDIS_SLAVE_SERVICE_HOST
           value: "redis"
         resources:
