--- a/my-apps/guestbook-test/deployment.yaml
+++ b/my-apps/guestbook-test/deployment.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,9 +29,9 @@ spec:
         - name: GET_HOSTS_FROM
           value: "env"
         - name: REDIS_MASTER_SERVICE_HOST
-          value: "redis"
-        - name: REDIS_SLAVE_SERVICE_HOST
-          value: "redis"
+          value: "10.43.224.136"
+        - name: REDIS_MASTER_SERVICE_PORT
+          value: "6379"
         resources:
           requests:
             memory: "64Mi"
